Fix bug: Storage pool name will wrap when it contains - and white-space
The storage pool name will wrap in the test mode, that is because
there are "-" in the name strings, so add a css to the name ensure
that the pool name will not wrap again.

--- a/ui/css/theme-default/storage.css
+++ b/ui/css/theme-default/storage.css
@@ -60,6 +60,7 @@
     text-overflow: ellipsis;
     font-weight: bold;
     line-height: 18px;
+    white-space: nowrap;
 }
 
 .usage {
